# supreme-unlearning

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  clean_logs.sh  docker-compose.dev.yml  docker-compose.yml  pure_pip.Dockerfile.cuda_12_1  pyproject.toml  requirements.cuda_12_1.txt  requirements.mps.txt  setup.py
.devcontainer/: devcontainer.json  setup.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yaml  config.yaml  feature-request.yaml
.github/workflows/: ci.yml  devcontainer.yml  docker.yml  publish.yml
community/: README.md  leaderboard.md
community/methods/template/: README.md  run.sh
docker/: docker-compose.dev.yml  docker-compose.yml  pure_pip.Dockerfile.cuda_12_1
docs/: adding_pinsfacerecognition.md  contributing.md  environment_setup.md  extending.md  future_work.md  implementation_notes.md  notation.md  reproducing_the_paper.md  script_arguments.md  tooling.md  wandb_fields.md  wandb_integration.md
notebooks/: custom_components.ipynb  reproduce_experiments.ipynb
requirements/: requirements.cuda_12_1.txt  requirements.deepspeed.txt  requirements.mps.txt
src/: MAIN.sh  README.md  run_local.sh  run_slurm.sh
src/datasets/: datasets.py
src/eval_metrics/: activation_distance.py  completeness.py  layerwise_distance.py  membership_inference_attack.py  metrics_main.py  resource_consumption.py  time.py  zrf.py
src/methods/baselines/: original.py  retrain.py
src/methods/unlearning_methods/: bad_teacher.py  finetune.py  jit.py  neg_grad.py  random_labeling.py  scrub.py  ssd.py  unsir.py
src/models/: ResNet18.py  ViT.py
src/supreme/: MAIN.sh  __init__.py  registry.py  run_local.sh  run_slurm.sh
src/supreme/eval_metrics/: accuracy.py  activation_distance.py  completeness.py  jsdiv.py  layerwise_distance.py  membership_inference_attack.py  resource_consumption.py  time.py  zrf.py
src/supreme/methods/baselines/: original.py  retrain.py
src/supreme/methods/unlearning_methods/: assd.py  bad_teacher.py  finetune.py  jit.py  lfssd.py  lfssd_det.py  neg_grad.py  random_labeling.py  scrub.py  ssd.py  ssd_det.py  unsir.py
src/supreme/models/: ResNet18.py  ViT.py
src/supreme/utils/: compute_dataset_stats.py  debug_utils.py  generic_utils.py  model_logging.py  process_tracker.py  project_config.py
src/supreme/utils/fabric/: fabric_setup.py  loggers_setup.py
src/supreme/utils/unlearning/: evaluation_utils.py  unlearn_main.py
src/supreme/utils/wandb_utils/results_analysis/: clean_outputs.sh  pins_paper_tables.ipynb
src/supreme/utils/wandb_utils/results_extraction/: orchestrate_wandb_export.sh
src/supreme/utils/wandb_utils/runtime/: move_retrain_to_stale.py  wandb_tools.sh
src/utils/: compute_dataset_stats.py  debug_utils.py  generic_utils.py  model_logging.py  process_tracker.py  project_config.py
src/utils/fabric/: callbacks.py  fabric_setup.py  loggers_setup.py
src/utils/parsers/: common_args.py
src/utils/training/: train_main.py  training_utils.py
src/utils/unlearning/: evaluation_utils.py  unlearn_main.py  unlearning_utils.py  update_checkpoint_paths.py
src/utils/wandb_utils/: README.md
src/utils/wandb_utils/results_analysis/: pins_paper_tables.ipynb
src/utils/wandb_utils/results_extraction/: export_config.py  orchestrate_wandb_export.sh
src/utils/wandb_utils/runtime/: delete_runs_by_seed.py  move_retrain_to_stale.py  wandb_manager.py  wandb_tools.sh
supreme/: MAIN.sh  __init__.py  registry.py  run_local.sh  run_slurm.sh
supreme/datasets/: datasets.py
supreme/eval_metrics/: accuracy.py  activation_distance.py  completeness.py  jsdiv.py  layerwise_distance.py  membership_inference_attack.py  metrics_main.py  resource_consumption.py  time.py  zrf.py
supreme/methods/baselines/: retrain.py
supreme/methods/unlearning_methods/: assd.py  bad_teacher.py  finetune.py  jit.py  lfssd.py  neg_grad.py  random_labeling.py  scrub.py  unsir.py
supreme/models/: ResNet18.py  ViT.py
supreme/utils/: compute_dataset_stats.py  debug_utils.py  generic_utils.py  memory_utils.py  model_logging.py  project_config.py
supreme/utils/fabric/: fabric_setup.py
supreme/utils/training/: train_main.py  training_utils.py
supreme/utils/unlearning/: evaluation_utils.py  unlearn_main.py  unlearning_utils.py  update_checkpoint_paths.py
supreme/utils/wandb_utils/: README.md
supreme/utils/wandb_utils/results_analysis/: clean_outputs.sh  pins_paper_tables.ipynb
supreme/utils/wandb_utils/results_extraction/: export_config.py  orchestrate_wandb_export.sh
supreme/utils/wandb_utils/runtime/: delete_runs_by_seed.py  wandb_manager.py  wandb_setup.py
tests/: conftest.py  test_imports.py  test_metrics.py  test_models.py  test_registry.py
