[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Distribution name on PyPI. The import package stays `supreme` (see
# [tool.setuptools.packages.find]); installing this distribution exposes
# `import supreme`, mirroring the scikit-learn -> sklearn convention.
name = "supreme-unlearning"
description = "A registry-based, multi-GPU framework for reproducible image-unlearning evaluation."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Petros Andreou" }]
keywords = ["machine-unlearning", "deep-learning", "pytorch", "lightning-fabric", "benchmark"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]

# Core dependencies mirror the cross-platform tested lock (requirements/requirements.mps.txt).
# For exact, reproducible CUDA reproduction of the paper's numbers, install from
# requirements/requirements.cuda_12_1.txt (which pins the CUDA-12.1 PyTorch build via
# --extra-index-url) plus the `cuda` extra below. See docs/reproducing_the_paper.md.
dependencies = [
    "torch==2.1.0",
    "torchvision==0.16.0",
    "torchaudio==2.1.0",
    "lightning==2.1.0",
    "pytorch-lightning==2.1.0",
    "transformers==4.35.0",
    "numpy<2.0",
    "scipy==1.13.1",
    "scikit-learn==1.6.1",
    "matplotlib==3.9.4",
    "seaborn==0.13.2",
    "wandb==0.25.1",
    "python-dotenv==1.1.0",
    "psutil",
    "requests==2.28.2",
    "urllib3<2.0.0",
    "chardet==4.0.0",
    "charset-normalizer==3.0.1",
    "datetime==5.5",
]

[project.optional-dependencies]
# NVIDIA CUDA-only extras: bitsandbytes precision + NVIDIA power/utilisation
# telemetry. Both ship as wheels, so this installs cleanly on any NVIDIA host.
# Not available on Apple Silicon.
cuda = [
    "bitsandbytes==0.42.0",
    "nvidia-ml-py==13.580.82",
]
# DeepSpeed ZeRO strategy. Kept as a separate extra because it compiles CUDA ops
# at install time and needs a CUDA toolkit (nvcc/CUDA_HOME), not just the driver -
# bundling it in `cuda` made `pip install ...[cuda]` fail on driver-only hosts.
deepspeed = ["deepspeed==0.14.5"]
tensorboard = ["tensorboard"]
dev = ["pre-commit", "debugpy", "pytest"]

[project.urls]
Homepage = "https://github.com/pedroandreou/supreme-unlearning"
Repository = "https://github.com/pedroandreou/supreme-unlearning"

# Console entry points for the train and unlearn/evaluate stages.
[project.scripts]
supreme-train = "supreme.utils.training.train_main:main"
supreme-unlearn = "supreme.utils.unlearning.unlearn_main:main"

# Entry-point GROUPS used to register external components from installed plugin
# packages (see src/supreme/registry.py and docs/extending.md). A plugin package
# declares entries under these groups; SUPREME discovers them automatically.
#   [project.entry-points."supreme.models"]
#   MyNet = "my_pkg.models:MyNet"
#   [project.entry-points."supreme.unlearning_methods"]
#   mymethod = "my_pkg.mymethod:mymethod"
#   [project.entry-points."supreme.plugins"]   # setup callable; for datasets/bulk
#   my_plugin = "my_pkg.register:setup"

# Ruff config (lint + format). Version is pinned to match .pre-commit-config.yaml
# so `make quality`/`make style` and the pre-commit hook agree.
[tool.ruff.lint.per-file-ignores]
# These entry points deliberately run _fix_slurm_gpu_binding() at module top,
# BEFORE any torch/CUDA import, so the later imports are intentionally not at the
# top of the file. Silence E402 (module-import-not-at-top) for them only.
"src/supreme/utils/unlearning/unlearn_main.py" = ["E402"]
"src/supreme/utils/training/train_main.py" = ["E402"]
# Teaching notebooks use normal notebook idioms ruff shouldn't enforce: grouped
# imports (E401), imports after an intro/setup line (E402), and each section
# re-importing torch/nn so cells are self-contained (F811).
"*.ipynb" = ["E401", "E402", "F811"]

# Pytest: the suite lives in tests/ and is CPU-only / download-free so it runs
# in CI without a GPU, dataset, or Hugging Face fetch (see tests/conftest.py).
[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.dynamic]
version = { attr = "supreme.__version__" }

# src-layout: the import package `supreme` lives under src/. package-dir maps the
# root namespace to src/ so setuptools resolves `supreme` (and the dynamic version
# from supreme.__version__) there. Distribution name: supreme-unlearning.
[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["supreme*"]
namespaces = false
